<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="24dp">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/found_items"
            android:textSize="28sp"
            android:textStyle="bold" />

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1">

        <ListView
                android:id="@+id/foundItemsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:dividerHeight="8dp" />

        <TextView
                android:id="@+id/emptyListText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/empty_list"
                android:textSize="16sp" />

    </FrameLayout>

    <Button
            android:id="@+id/addItemButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/add_item" />

</LinearLayout>
